--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           
     </div>
 
-<div class="container">
+<!--<div class="container">
    <img src="images/hitesh-signature.png" alt="hitesh-signature">
    
-</div>
+</div>-->
 
 
     <!-- Optional JavaScript -->
